--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,5 +11,6 @@
   <p>
     <button ion-button navPush="SignInPage">Login</button>
     <button ion-button navPush="UserProfileEditPage">user-profile</button>
+    <button ion-button navPush="UserTabsPage">Tabs</button>
   </p>
 </ion-content>
