--- a/src/pages/user-profile-edit/user-profile-edit.html
+++ b/src/pages/user-profile-edit/user-profile-edit.html
@@ -8,31 +8,34 @@
   
   
 <ion-content padding>
+    <ion-item>
+      <ion-label stacked>Username</ion-label>
+      <ion-input type="text" [(ngModel)]="profile.username"></ion-input>
+    </ion-item>
+
   <ion-item>
     <ion-label stacked>Full name</ion-label>
-    <ion-input type="text" [(ngModel)]="user.name"></ion-input>
-  </ion-item>
-
-  <ion-item>
-    <ion-label stacked>Email</ion-label>
-    <ion-input type="email" [(ngModel)]="user.email"></ion-input>
-  </ion-item>
-
-  <ion-item>
-    <ion-label stacked>Phone</ion-label>
-    <ion-input type="number" [(ngModel)]="user.phone"></ion-input>
-  </ion-item>
-
-  <ion-item>
-    <ion-label stacked>Gender</ion-label>
-    <ion-input type="text" [(ngModel)]="user.gender"></ion-input>
+    <ion-input type="text" [(ngModel)]="profile.fullName"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label stacked>Matric number</ion-label>
-    <ion-input type="text" [(ngModel)]="user.id"></ion-input>
+    <ion-input type="text" [(ngModel)]="profile.matricNumber"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label stacked>Phone</ion-label>
+    <ion-input type="number" [(ngModel)]="profile.phone"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label stacked>Gender</ion-label>
+    <ion-select [(ngModel)]="profile.gender">
+      <ion-option value="male">Male</ion-option>
+      <ion-option value="female">Female</ion-option>
+    </ion-select>
   </ion-item>
   <br>
-  <button ion-button block (click)="addUser(user)">save</button>
+  <button ion-button block (click)="createProfile()">save</button>
 </ion-content>
   
