--- a/src/pages/user-home/user-home.html
+++ b/src/pages/user-home/user-home.html
@@ -65,7 +65,7 @@
         </ion-select>
       </ion-item>
       <br>
-      <button ion-button block round color="primary">Request ride</button>
+      <button ion-button block color="primary">Request ride</button>
     </ion-card-content>
   </ion-card>
 </ion-content>
